hotfix(course-statistics): update course status and total counts after lesson and section modifications